# wincd

./: Cargo.toml  LICENSE-MIT  README.md  README.zh-CN.md  install.sh
.github/workflows/: ci.yml  release.yml
completions/: README.md  wincd.bash  wincd.fish  wincd.zsh
src/: cli.rs  clipboard.rs  converter.rs  lib.rs  main.rs  resolver.rs  shell.rs  ui.rs
src/commands/: completions.rs  convert.rs  init.rs  install.rs  mod.rs  uninstall.rs
tests/: cli.rs
