[package]
name = "wincd"
version = "2.0.0"
edition = "2021"
rust-version = "1.74"
description = "WSL 下一步到位的 Windows 路径导航工具 — 粘贴 Windows 路径，直接 cd"
authors = ["ccc007ccc"]
license = "MIT"
repository = "https://github.com/ccc007ccc/wincd"
homepage = "https://github.com/ccc007ccc/wincd"
documentation = "https://docs.rs/wincd"
keywords = ["wsl", "windows", "path", "cd", "navigation"]
categories = ["command-line-utilities"]
readme = "README.md"
exclude = ["/.github", "/target", "/install.sh"]

[dependencies]
clap = { version = "4", features = ["derive", "wrap_help"] }
clap_complete = "4"
anyhow = "1"
thiserror = "2"
owo-colors = { version = "4", features = ["supports-colors"] }
arboard = { version = "3", default-features = false }
dirs = "6"
strsim = "0.11"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[lib]
name = "wincd"
path = "src/lib.rs"

[[bin]]
name = "wincd"
path = "src/main.rs"
